--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
-    background: url('../images/sim_desk.png') no-repeat center center fixed;
-    background-size: cover;
+    background-color: #111; /* solid dark background for readability */
     color: #fff;
 }
 
