--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,10 @@ body, html {
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
     background-color: #111; /* solid dark background for readability */
+    background-image: url("../../images/sim_desk.png");
+	background-position: center;
+	background-size: cover;
+	ackground-repeat: no-repeat;
     color: #fff;
 }
 
@@ -112,3 +116,4 @@ article img {
         gap: 1rem;
     }
 }
+
