--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,11 +124,11 @@ article img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../images/sim_desk.png");
+    background-image: url("../../images/sim_desk.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index: -1; /* sit behind everything */
+    z-index: -1;
 }
 
 /* -------------------- Responsive -------------------- */
@@ -143,3 +143,4 @@ article img {
         gap: 1rem;
     }
 }
+
