--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,8 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
-    background-color: #111; /* fallback if image fails */
-    color: #fff;
+    /*background-color: #111;  fallback if image fails */
+    /*color: #fff; */
 }
 
 /* Links */
@@ -143,4 +143,5 @@ article img {
         gap: 1rem;
     }
 }
+
 
